--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -101,8 +101,8 @@
 					class="tl pl25"
 					style="width:250px; height:60px;"
 				>
-					<img src="${item.participant_icon}" />
-					${item.participant_name}
+					<img src="${item.icon}" />
+					${item.name}
 				</td>
 				<td>
 					${item.count}
