--- a/card/templates/card/limit.html
+++ b/card/templates/card/limit.html
@@ -13,6 +13,6 @@
 		href: '#'
 	}];
 
-	W.pageContentComponent = './card/create_limit/CreateLimitPage.react';
+	W.pageContentComponent = './card/limit/LimitPage.react';
 </script>
 {% endblock %}
