--- a/card/templates/card/ordinary.html
+++ b/card/templates/card/ordinary.html
@@ -4,15 +4,15 @@
 <script type="text/javascript">
 	W.breadcrumb = [{
 		name: '微众卡',
-		href: '/outline/datas/'
+		href: '/card/ordinary_rules/'
 	}, {
 		name: '通用卡',
-		href: '#'
+		href: '/card/ordinary_rules/'
 	},{
 		name: '创建新卡',
 		href: '#'
 	}];
 
-	W.pageContentComponent = './card/create_ordinary/CreateOrdinaryPage.react';
+	W.pageContentComponent = './card/ordinary/OrdinaryPage.react';
 </script>
 {% endblock %}
