--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -2,7 +2,7 @@
 <html class="login-page">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>WeManage——后台管理工具模板项目</title>
+        <title>微众卡管理系统</title>
 	    <link type="text/css" rel="stylesheet" media="all" href="/static/css/base.css">
 	    <link type="text/css" rel="stylesheet" media="all" href="/static/lib/bootstrap-3.3.6/css/bootstrap.min.css">
 	    <link type="text/css" rel="stylesheet" media="all" href="/static/css/login.css">
@@ -10,7 +10,7 @@
     <body class="loginBg">
         <div id="topbar">
 	        <div id="global-nav">
-		        <div id="weixin-logo">WeManage —— 后台管理工具模板项目</div>
+		        <div id="weixin-logo">微众卡管理系统</div>
 	        </div>
         </div>
 
