订单打印 删除debug语句／样式对齐

--- a/weapp/static_v2/css/mall_order.css
+++ b/weapp/static_v2/css/mall_order.css
@@ -1161,6 +1161,7 @@
 }
 .order-print-info-table.table>tbody>tr>td.order-print-info-odd {
     width: 42%;
+    vertical-align: baseline;
 }
 .order-print-info-row {
     line-height: 17px;
