--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -258,6 +258,7 @@
             resource: 'get_rank_list',
             method: 'get',
             args: {
+				webapp_owner_id: W.webappOwnerId,
                 recordId: W.appRecordId
             },
             success: function(data) {
