--- a/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/shvotedescription/shvotedescription.html
@@ -10,7 +10,7 @@
     <div>
         <img src="{{ component.model.material_image }}">
     </div>
-    <div class="wa-shvote-desc none">
+    <div class="wa-shvote-desc">
         <h1 class="wui-i-title xa-title">{{component.model.title}}</h1>
         <h5>活动时间：</h5>
         <p class="wui-i-time">
