--- a/weapp/static_v2/css/mall_order.css
+++ b/weapp/static_v2/css/mall_order.css
@@ -1140,12 +1140,14 @@
     width: 100%;
     top:-3px;
     background-color: #fff;
+    font-family: "Microsoft YaHei","STXihei";
     /*top:100%;*/
     /*left:-300%;*/
 }
 #order-print-pages{
     width:790px;
     margin:0 auto;
+    font-size: 14px;
     background-color: #fff;
 }
 .order-print-title {
@@ -1154,7 +1156,10 @@
     text-align: center;
     margin-bottom: 20px;
 }
-
+.table.order-print-product-attr-names>thead>tr>th{
+    font-size: 14px;
+    font-weight: bold;
+}
 .order-print-info-table.table>tbody>tr>td{
     text-align: left;
     border:0;
@@ -1187,8 +1192,8 @@ table.table.order-print-summary-sec>tbody>tr>td.order-print-summary-cost{
     text-align: right;
 }
 .order-print-footer img{
-    width: 80px;
-    height: 80px;
+    width: 110px;
+    height: 110px;
 
 }
 @media print {
