--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -104,7 +104,7 @@
 					class="tl pl25"
 					style="width:250px; height:60px;"
 				>
-					<img src="${item.icon}" />
+					<img style="width:60px; height:60px;" src="${item.icon}" />
 					${item.name}
 				</td>
 				<td>
