--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -220,7 +220,7 @@
         $('.wa-ivote').on('click', function(){
             if(voteLock) return false;
             voteLock = true;
-            var vote_to = 6;
+            var vote_to = 6; //需要获取投票对象的member_id
             W.getApi().call({
                 app: 'm/apps/shvote',
                 resource: 'shvote_participance',
@@ -231,9 +231,11 @@
                     vote_to: vote_to
                 },
                 success: function(data){
+                    voteLock = false;
                     //TODO 修改被投票用户的票数，和投票用户的可投票次数
                 },
                 error: function(data){
+                    voteLock = false;
                     if(data.errMsg == 'none_member'){
                         //TODO 弹出二维码窗口
                     }else{
@@ -332,33 +334,5 @@
         });
     }
 
-    function Template(tpl) {
-    var
-        fn,
-        match,
-        code = ['var r=[];\nvar _html = function (str) { return str.replace(/&/g, \'&amp;\').replace(/"/g, \'&quot;\').replace(/\'/g, \'&#39;\').replace(/</g, \'&lt;\').replace(/>/g, \'&gt;\'); };'],
-        re = /\{\s*([a-zA-Z\.\_0-9()]+)(\s*\|\s*safe)?\s*\}/m,
-        addLine = function (text) {
-            code.push('r.push(\'' + text.replace(/\'/g, '\\\'').replace(/\n/g, '\\n').replace(/\r/g, '\\r') + '\');');
-        };
-    while (match = re.exec(tpl)) {
-        if (match.index > 0) {
-            addLine(tpl.slice(0, match.index));
-        }
-        if (match[2]) {
-            code.push('r.push(String(this.' + match[1] + '));');
-        }
-        else {
-            code.push('r.push(_html(String(this.' + match[1] + ')));');
-        }
-        tpl = tpl.substring(match.index + match[0].length);
-    }
-    addLine(tpl);
-    code.push('return r.join(\'\');');
-    fn = new Function(code.join('\n'));
-    this.render = function (model) {
-        return fn.apply(model);
-    };
-}
 </script>
 {% endblock %}
